group("tersbox_effect") {
  deps = [
    "common:tersbox_effect_common",
    "cube:tersbox_effect_cube",
    "bumpmap:tersbox_effect_bumpmap",
    "fog:tersbox_effect_fog",
    "ice:tersbox_effect_ice",
    "reflect:tersbox_effect_reflect",
    "water:tersbox_effect_water",
    "blur:tersbox_effect_blur",
    "shadowmap:tersbox_effect_shadowmap",
    "multilight_shadowmap:tersbox_effect_multilight_shadowmap",
    "projectlight:tersbox_effect_projectlight",
  ]
}