
group("tersbox_fter") {
  deps = [
    "base:tersbox_fter_base",
    "gen_heightmap:tersbox_fter_gen_heightmap",
    "grid:tersbox_fter_grid",
    "frustrum_frame:tersbox_fter_frustrum_frame",
    "heightmap:tersbox_fter_heightmap",
    "dirlight:tersbox_fter_dirlight",
    "zbuffer:tersbox_fter_zbuffer",
    "simpletex:tersbox_fter_simpletex",
    "detailmap:tersbox_fter_detailmap",
    "lightmap:tersbox_fter_lightmap",
    "quadcull:tersbox_fter_quadcull",
  ]
}