

group("tersbox_tertur") {
  deps = [
    "grid:tersbox_tertur_grid",
    "heightmap:tersbox_tertur_heightmap",
    "terlight:tersbox_tertur_terlight",
    "texture:tersbox_tertur_texture",
    "quadtree:tersbox_tertur_quadtree",
    "move:tersbox_tertur_move",
    "skydomes:tersbox_tertur_skydomes",
    "bitmapclouds:tersbox_tertur_bitmapclouds",
  ]
}