import("//build/templates/afx.gni")

afx("tersbox_effect_cube_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("tersbox_effect_cube") {
  sources = ["main.cc"]
  deps = ["//tersbox/base:tersbox_base",
          "//tersbox/effect/common:tersbox_effect_common",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_effect_cube_effect",
         ]
}