import("//build/templates/afx.gni")

afx("tersbox_effect_reflect_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

afx("tersbox_effect_reflect_effect2") {
  source = "reflect.afx"
  filename = "reflect"
}

executable("tersbox_effect_reflect") {
  sources = ["main.cc"]
  deps = ["//tersbox/base:tersbox_base",
          "//tersbox/effect/common:tersbox_effect_common",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_effect_reflect_effect",
          ":tersbox_effect_reflect_effect2",
         ]
}