import("//build/templates/afx.gni")


static_library("tersbox_fter_base") {
  sources = [
    "terrain_data.cc",
    "terrain_data.h",
  ]
  deps = ["//azer/render:render",
          "//azer/util:azer_util",
          "//base:appinit",
          "//azer/render_system/d3d11:d3d11_render_system",
          "//tersbox/base:tersbox_base",
         ]
}