import("//build/templates/afx.gni")

afx("tersbox_fter_detailmap_effect") {
  source = "detailmap.afx"
  filename = "detailmap"
}


executable("tersbox_fter_detailmap") {
  sources = ["main.cc"]
  deps = ["//tersbox/fter/base:tersbox_fter_base",
          "//azer/render:render",
          "//azer/util:azer_util",
          "//base:appinit",
          ":tersbox_fter_detailmap_effect",
         ]
}