import("//build/templates/afx.gni")

afx("tersbox_fter_dirlight_effect") {
  source = "dirlight.afx"
  filename = "dirlight"
}


executable("tersbox_fter_dirlight") {
  sources = ["main.cc"]
  deps = ["//tersbox/fter/base:tersbox_fter_base",
          "//azer/render:render",
          "//azer/util:azer_util",
          "//base:appinit",
          ":tersbox_fter_dirlight_effect",
         ]
}