import("//build/templates/afx.gni")

afx("tersbox_fter_quadcull_effect") {
  source = "clod.afx"
  filename = "clod"
}


executable("tersbox_fter_quadcull") {
  sources = ["main.cc", "terrain.cc",]
  deps = ["//tersbox/fter/base:tersbox_fter_base",
          "//azer/render:render",
          "//azer/util:azer_util",
          "//base:appinit",
          ":tersbox_fter_quadcull_effect",
         ]
}