import("//build/templates/afx.gni")

afx("tersbox_fter_zbuffer_effect") {
  source = "zbuffer.afx"
  filename = "zbuffer"
}


executable("tersbox_fter_zbuffer") {
  sources = ["main.cc"]
  deps = ["//tersbox/fter/base:tersbox_fter_base",
          "//azer/render:render",
          "//azer/util:azer_util",
          "//base:appinit",
          ":tersbox_fter_zbuffer_effect",
         ]
}