import("//build/templates/afx.gni")

afx("tersbox_roam_err_metric_effect") {
  source = "dirlight.afx"
  filename = "dirlight"
}


executable("tersbox_roam_err_metric") {
  sources = ["main.cc", "roam.cc", "roam.h"]
  deps = ["//tersbox/base:tersbox_base",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_roam_err_metric_effect",
         ]
}