import("//build/templates/afx.gni")

afx("tersbox_fter_grid_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}


executable("tersbox_fter_grid") {
  sources = ["main.cc"]
  deps = ["//tersbox/fter/base:tersbox_fter_base",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_fter_grid_effect",
         ]
}