import("//build/templates/afx.gni")

afx("tersbox_roam_indices_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}


executable("tersbox_roam_indices") {
  sources = ["main.cc"]
  deps = ["//tersbox/base:tersbox_base",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_roam_indices_effect",
         ]
}