import("//build/templates/afx.gni")

afx("tersbox_roam_landscape_effect") {
  source = "dirlight.afx"
  filename = "dirlight"
}


executable("tersbox_roam_landscape") {
  sources = ["main.cc",
             "roam.cc",
             "roam.h",
             "landscape.cc",
             "landscape.h",
             "terrain.cc",
             "terrain.h"
             ]
  deps = ["//tersbox/base:tersbox_base",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_roam_landscape_effect",
         ]
}