import("//build/templates/afx.gni")

afx("tersbox_roam_multitile_effect") {
  source = "dirlight.afx"
  filename = "dirlight"
}


executable("tersbox_roam_multitile") {
  sources = ["main.cc", "roam.cc", "roam.h"]
  deps = ["//tersbox/base:tersbox_base",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_roam_multitile_effect",
         ]
}