import("//build/templates/afx.gni")

afx("tersbox_tertur_bitmapclouds_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

afx("tersbox_tertur_bitmapclouds_effect2") {
  source = "skyplane.afx"
  filename = "skyplane"
}

executable("tersbox_tertur_bitmapclouds") {
  sources = ["main.cc", "skyplane.cc"]
  deps = ["//tersbox/base:tersbox_base",
          "//tersbox/effect/common:tersbox_effect_common",
          "//azer/render:render",
          "//base:appinit",
          ":tersbox_tertur_bitmapclouds_effect",
          ":tersbox_tertur_bitmapclouds_effect2",
         ]
}